--- a/android/src/main/res/layout/activity_crop.xml
+++ b/android/src/main/res/layout/activity_crop.xml
@@ -70,6 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
+        layout_marginBottom="30dp"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary">
 
